Fix acessibilty issues

--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
       />
     </main>
     <footer>
-      <ul class="social-media">
-        <a class="social-link" href="https://google.com" target="_blank">
-          <li class="list-item">
+      <div class="social-media">
+        <a class="social-media-icons" href="https://google.com" target="_blank">
+          <div class="border-div">
             <i class="icon fab fa-facebook-f"></i>
-          </li>
+          </div>
         </a>
-        <a class="social-link" href="https://google.com" target="_blank">
-          <li class="list-item">
+        <a class="social-media-icons" href="https://google.com" target="_blank">
+          <div class="border-div">
             <i class="icon fab fa-twitter"></i>
-          </li>
+          </div>
         </a>
-        <a class="social-link" href="https://google.com" target="_blank">
-          <li class="list-item">
+        <a class="social-media-icons" href="https://google.com" target="_blank">
+          <div class="border-div">
             <i class="icon fab fa-instagram"></i>
-          </li>
+          </div>
         </a>
-      </ul>
+      </div>
 
       <p>&copy; Copyright Ping. All rights reserved.</p>
     </footer>
