Fix acessibility issues 2

--- a/index.html
+++ b/index.html
@@ -45,17 +45,32 @@
     </main>
     <footer>
       <div class="social-media">
-        <a class="social-media-icons" href="https://google.com" target="_blank">
+        <a
+          class="social-media-icons"
+          href="https://google.com"
+          target="_blank"
+          aria-label="Facebook"
+        >
           <div class="border-div">
             <i class="icon fab fa-facebook-f"></i>
           </div>
         </a>
-        <a class="social-media-icons" href="https://google.com" target="_blank">
+        <a
+          class="social-media-icons"
+          href="https://google.com"
+          target="_blank"
+          aria-label="Twitter"
+        >
           <div class="border-div">
             <i class="icon fab fa-twitter"></i>
           </div>
         </a>
-        <a class="social-media-icons" href="https://google.com" target="_blank">
+        <a
+          class="social-media-icons"
+          href="https://google.com"
+          target="_blank"
+          aria-label="Instagram"
+        >
           <div class="border-div">
             <i class="icon fab fa-instagram"></i>
           </div>
